<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt">TXT</string>
    <string name="pdf">PDF</string>
    <string name="epub">EPUB</string>
    <string name="b2">B2</string>
    <string name="doc">DOC</string>
    <string name="docx">DOCX</string>
    <string name="xls">XLS</string>
    <string name="ppt">PPT</string>
</resources>